# flashmask

./: .dockerignore  .dvcignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  dvc.yaml  justfile  pyproject.toml
.dvc/: config
.github/workflows/: ci.yml
apps/: demo.py  label_tool.py
configs/: config.yaml
configs/active/: uncertainty.yaml
configs/classifier/: resnet18.yaml
configs/data/: real.yaml  sample.yaml  synthetic.yaml
configs/inference/: onnx_pipeline.yaml
configs/model/: yolo_n.yaml  yolo_s.yaml
configs/train/: finetune_real.yaml  pretrain_synthetic.yaml
data/sample/: sample_metadata.json
docs/: DATASET_CARD.md  MODEL_CARD.md
models/: README.md
reports/: results.csv
reports/figures/: args.yaml
scripts/: make_sample_images.py
src/flashmask/: __init__.py  cli.py  config.py
src/flashmask/active/: __init__.py  mine.py  sampling.py
src/flashmask/data/: __init__.py  dataset.py  labels.py  pdf_to_image.py  scrape.py  splits.py  synthetic.py
src/flashmask/inference/: __init__.py  pipeline.py  postprocess.py
src/flashmask/labeling/: __init__.py  doctr_assist.py  prelabel.py  region.py
src/flashmask/modeling/: __init__.py  evaluate.py  export.py  train_classifier.py  train_detector.py
src/flashmask/serving/: __init__.py  api.py
tests/: test_active_sampling.py  test_api.py  test_doctr_cluster.py  test_labels.py  test_onnx_parity.py  test_postprocess.py  test_prelabel.py  test_splits.py
