[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flashmask"
version = "0.1.0"
description = "Detecting and masking text regions in diagram images to auto-generate study flashcards (YOLO + classifier + OCR)."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10,<3.13"
authors = [{ name = "Bei Mi Chen" }]
keywords = [
    "computer-vision",
    "object-detection",
    "yolo",
    "ultralytics",
    "ocr",
    "onnx",
    "mlops",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Image Recognition",
]

# Default install is the *lightweight inference + demo* path (all ONNX-based, no torch),
# so `uv sync` + `just demo` works on a fresh clone without a multi-GB CUDA stack.
dependencies = [
    "numpy>=1.26",
    "opencv-python-headless>=4.9",
    "pillow>=10.2",
    "onnxruntime>=1.17",
    "rapidocr-onnxruntime>=1.3",
    "pyyaml>=6.0",
    "hydra-core>=1.3",
    "omegaconf>=2.3",
    "pydantic-settings>=2.2",
    "python-dotenv>=1.0",
    "tqdm>=4.66",
    "gradio>=4.44",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
# Heavy training stack — only needed to (re)train the detector/classifier.
train = [
    "torch>=2.2",
    "torchvision>=0.17",
    "ultralytics>=8.3",
    "mlflow>=2.14",
]
# OCR-assisted labeling UI.
label = [
    "python-doctr[torch]>=0.8",
    "streamlit>=1.36",
    "streamlit-drawable-canvas>=0.9",
]
# Corpus acquisition (arXiv / PMC / CORE).
scrape = [
    "arxiv>=2.1",
    "pymupdf>=1.24",
    "feedparser>=6.0",
    "biopython>=1.83",
    "requests>=2.32",
]
all = ["flashmask[train,label,scrape]"]

[dependency-groups]
dev = [
    "ruff>=0.6",
    "pyright>=1.1.380",
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "pre-commit>=3.7",
    "httpx>=0.27",  # FastAPI TestClient
]

[project.urls]
Repository = "https://github.com/beimichen/flashmask"
"Model Card" = "https://github.com/beimichen/flashmask/blob/main/docs/MODEL_CARD.md"

[project.scripts]
flashmask = "flashmask.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/flashmask"]

# ─────────────────────────── Ruff (lint + format) ───────────────────────────
[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
# Sensible, modern rule set: pycodestyle, pyflakes, isort, pyupgrade, bugbear,
# comprehensions, simplify, naming. Not maximalist — readable code over rule-golf.
select = ["E", "F", "I", "UP", "B", "C4", "SIM", "N", "W"]
ignore = [
    "E501",  # line length handled by the formatter
    "B008",  # FastAPI/typer rely on calls in argument defaults
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]
"apps/*" = ["E402"]  # Streamlit apps set page config before some imports

[tool.ruff.lint.isort]
known-first-party = ["flashmask"]

# ─────────────────────────────── Pytest ─────────────────────────────────────
[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
markers = [
    "needs_weights: test requires trained model weights that are not committed",
    "needs_torch: test requires the optional [train] stack (torch/ultralytics)",
]

[tool.coverage.run]
branch = true
source = ["flashmask"]

[tool.coverage.report]
show_missing = true
skip_covered = true

# ─────────────────────────────── Pyright ────────────────────────────────────
[tool.pyright]
include = ["src"]
pythonVersion = "3.10"
typeCheckingMode = "basic"
# Optional extras (torch, doctr, requests, …) aren't installed in the default env,
# so don't flag their imports or stub-only resolution.
reportMissingImports = false
reportMissingModuleSource = false
